[package]
name = "vm"
version = "0.1.0"
authors = ["Markus <marwes91@gmail.com>"]


[dependencies.log]
[dependencies.env_logger]
[dependencies.quick-error]
version = "0.2.1"


[dependencies.any_ref]
git = "https://github.com/Marwes/any_ref"

[dependencies.base]
path = "../base"
[dependencies.parser]
path = "../parser"
[dependencies.check]
path = "../check"
